<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/space_4"
    android:paddingVertical="@dimen/gap_row">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/skland_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/enable_feature"
        android:textAppearance="@style/TextAppearance.Venus.DrawerLabel" />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_4"
        app:singleSelection="false">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/skland_checkbox_arknights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_3"
            android:text="@string/arknights"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="?attr/colorOnSurface" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/skland_checkbox_endfield"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_3"
            android:text="@string/endfield"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="?attr/colorOnSurface" />

    </com.google.android.material.chip.ChipGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_2"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/skland_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_2"
            android:layout_weight="1"
            android:drawableEnd="@drawable/ic_link_url"
            android:drawablePadding="@dimen/space_1"
            android:gravity="center_vertical"
            android:text="@string/go_to_login_skland"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="?attr/colorOnSurfaceVariant" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/skland_cookie_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_2"
            android:layout_weight="1"
            android:drawableEnd="@drawable/ic_link_url"
            android:drawablePadding="@dimen/space_1"
            android:gravity="center_vertical"
            android:text="@string/go_to_get_content"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="?attr/colorOnSurfaceVariant" />

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_4"
        android:text="@string/skland_403_tip"
        android:textAppearance="?attr/textAppearanceBodySmall"
        android:textColor="?attr/colorOnSurfaceVariant" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_2"
        android:text="@string/skland_content_tip"
        android:textAppearance="?attr/textAppearanceBodySmall"
        android:textColor="?attr/colorOnSurfaceVariant" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/skland_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/space_2"
        android:text="@string/save_skland_settings"
        android:textAppearance="?attr/textAppearanceLabelMedium" />

</LinearLayout>
